--- a/index.html
+++ b/index.html
@@ -2,21 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Personal portfolio website" />
-  <meta name="keywords" content="portfolio, full-stack software engineering, projects, skills, contact" />
-  <meta name="author" content="Your Name" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Personal portfolio website of Ataka Shafia, a full-stack software engineer." />
+  <meta name="keywords" content="portfolio, full-stack software engineering, web developer, projects, skills, contact" />
+  <meta name="author" content="Ataka Shafia" />
   <title>Portfolio - Ataka Shafia</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
-
 <body>
   <header>
     <nav>
       <ul class="nav-list">
         <li><a href="#home" class="nav-link">Home</a></li>
         <li><a href="#about" class="nav-link">About Me</a></li>
-        <!-- <li><a href="#services" class="nav-link">Services</a></li> -->
         <li><a href="#projects" class="nav-link">Projects</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
       </ul>
@@ -34,127 +32,103 @@
       <h2>About Me</h2>
       <p>I’m Ataka Shafia, a Business and System Information student with a growing interest in tech, communication, and digital strategy. I’m passionate about connecting business needs with smart system solutions, and I enjoy learning how different technologies can solve real-world problems.</p>
       
-      <BR></BR>
-      <h3>Education</h3>
-      <p><strong>BINUS University</strong></p>
-      <p>Undergraduate - Entrepreneurship Business Creation</p>
-      <p>Undergraduate - System Information</p>
-      <p>GPA 3.62/4.00</p>
-      <BR></BR>
-      <p><strong>RevoU</strong></p>
-      <p>Full-Stack Software engineering</p>
-      <BR></BR>
-
-      <h3>Work Experience</h3>
-      <ul>
-        <li>Production Intern - Casavira (2021-2022) </li>
-        <li>Junior Dressmaker intern - Freddy Kebaya (2019-2020) </li>
-      </ul>
-      <BR></BR>
-
-      <h3>Skills</h3>
-
-      <p>Front-End</p>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Java Script</li>
-        <li>React</li>
-        <li>jQuery</li>
-      </ul>
-      <br></br>
-
-      <p>Back-End</p>
-      <ul>
-        <li>NodeJs</li>
-        <li>MySQL</li>
-      </ul>
-      <BR></BR>
-
-      <p>Tools</p>
-      <ul>
-        <li>Figma</li>
-        <li>Vscode</li>
-        <li>Netbeans</li>
-        <li>Visual Paradigm</li>
-        <li>Mendix</li>
-      </ul>
-      <BR></BR>
-
-      <h3>Interests</h3>
-      <ul>
-        <li>UI/UX Design</li>
-        <li>Full-Stack Web Developer</li>
-        <li>Database Documentation</li>
-        <li>ERP System</li>
-        <li>System Analysis and Design</li>
-      </ul>
-    </section>
-
-    <!-- FOR FUTURE IMPLEMENTATION
-    <section id="services" class="section services-section" tabindex="-1">
-      <h2>My Services</h2>
-      <p>Describe the services</p>
-      <div class="services-container">
-        <article class="service-item">
-          <h3>Service 1</h3>
-          <p>Short description of service 1.</p>
-        </article>
-        <article class="service-item">
-          <h3>Service 2</h3>
-          <p>Short description of service 2.</p>
-        </article>
-        <article class="service-item">
-          <h3>Service 3</h3>
-          <p>Short description of service 3.</p>
-        </article>
+      <div class="about-subsection">
+        <h3>Education</h3>
+        <p><strong>BINUS University</strong></p>
+        <p>Undergraduate - Entrepreneurship Business Creation & System Information</p>
+        <p>GPA 3.62/4.00</p>
+        <hr class="subsection-divider">
+        <p><strong>RevoU</strong></p>
+        <p>Full-Stack Software Engineering</p>
       </div>
-    </section> --> 
+
+      <div class="about-subsection">
+        <h3>Work Experience</h3>
+        <ul>
+          <li>Production Intern - Casavira (2021-2022)</li>
+          <li>Junior Dressmaker Intern - Freddy Kebaya (2019-2020)</li>
+        </ul>
+      </div>
+
+      <div class="about-subsection">
+        <h3>Skills</h3>
+        <div class="skills-container">
+          <div class="skill-category">
+            <h4>Front-End</h4>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>React</li>
+              <li>jQuery</li>
+            </ul>
+          </div>
+          <div class="skill-category">
+            <h4>Back-End</h4>
+            <ul>
+              <li>Node.js</li>
+              <li>MySQL</li>
+            </ul>
+          </div>
+          <div class="skill-category">
+            <h4>Tools</h4>
+            <ul>
+              <li>Figma</li>
+              <li>VS Code</li>
+              <li>Netbeans</li>
+              <li>Visual Paradigm</li>
+              <li>Mendix</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="about-subsection">
+        <h3>Interests</h3>
+        <ul>
+          <li>UI/UX Design</li>
+          <li>Full-Stack Web Development</li>
+          <li>Database Documentation</li>
+          <li>ERP Systems</li>
+          <li>System Analysis and Design</li>
+        </ul>
+      </div>
+    </section>
 
     <section id="projects" class="section projects-section" tabindex="-1">
       <h2>My Projects</h2>
       <div class="projects-container">
         <article class="project-card">
-        <img src="" alt="KUM">
-          <h3>ERP System : KUM Management</h3>
-          <p>Worked with KUM Villa Management in Bali to design and build an ERP system that addressed key operational issues, including double booking and financial tracking challenges. 
-The project received an A grade during the business pitching session with the mentor</p>
+          <img src="./Assets/KUM.png" alt="ERP System for KUM Villa Management in Bali">
+          <h3>ERP System: KUM Management</h3>
+          <p>Designed and built an ERP system to solve operational issues like double bookings and financial tracking for KUM Villa Management, earning an A grade in the business pitching session.</p>
         </article>
-
         <article class="project-card">
-        <img src="" alt="STUDICA">
-          <h3>Front-End Web Developer : STUDICA</h3>
-          <p>Developed the front-end of STUDICA, a web-based platform designed to help users discover and enroll in online courses to improve their skills in various areas of interest, using HTML, CSS, and JavaScript</p>
+          <img src="./Assets/STUDICA.png" alt="Front-end development for STUDICA e-learning platform">
+          <h3>Front-End: STUDICA</h3>
+          <p>Developed the front-end for STUDICA, a platform for discovering and enrolling in online courses, using HTML, CSS, and JavaScript to create a user-friendly experience.</p>
         </article>
-
         <article class="project-card">
-        <img src="" alt="Maxim">
-          <h3>Quality Assurance : Maxim Mobile Application</h3>
-          <p>Conducted manual testing with a black-box testing technique on the Maxim application by executing 98 test scenarios, identifying 7 bugs in the process. 
-Compiled comprehensive documentation,including test cases, test suites, bug reports, and bug management using the FMEA table. 
-The project earned a final score of 92/100.</p>
+          <img src="./Assets/Maxim.png" alt="Quality assurance testing for the Maxim mobile application">
+          <h3>QA: Maxim Mobile App</h3>
+          <p>Conducted manual black-box testing on the Maxim app, executing 98 test scenarios, identifying 7 bugs, and compiling comprehensive documentation, achieving a score of 92/100.</p>
         </article>
-
         <article class="project-card">
-        <img src="" alt="ArthaCo">
-          <h3>Database Documentation : ArthaCo</h3>
-          <p>Prepared complete database design documentation, starting from business process identification and system requirements to conceptual and logical design, including the final ERD. 
-            Utilized Visual Paradigm, Miro, and Microsoft Word for collaboration. The project received a final score of 90/100.</p>
+          <img src="./Assets/Artha Co.png" alt="Database documentation for ArthaCo">
+          <h3>Database Docs: ArthaCo</h3>
+          <p>Prepared complete database design documentation, from business requirements to the final ERD, using Visual Paradigm and Miro for collaboration, earning a score of 90/100.</p>
         </article>
-
         <article class="project-card">
-        <img src="" alt="JustClick">
-          <h3>UI/UX Design : Just Click</h3>
-          <p>Lo-Fi wireframe design for JustClick, a Human Resource platform that helps companies monitor operations, meet business needs, and improve employee productivity with flexible access anytime, anywhere. 
-This project was designed using Figma, leveraging prototyping and collaborative design to create an intuitive and user-friendly interface.</p>
+          <img src="./Assets/JustClick.png" alt="UI/UX wireframe design for the JustClick HR platform">
+          <h3>UI/UX Design: Just Click</h3>
+          <p>Designed a Hi-Fi wireframe for JustClick, an HR platform, using Figma to create an intuitive interface for monitoring operations and employee productivity.</p>
         </article>
       </div>
     </section>
-    <BR></BR>
 
     <section id="contact" class="section contact-section" tabindex="-1">
       <h2>Contact Me</h2>
-      <form id="contact-form" novalidate>
+      <form id="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required aria-required="true" />
         
@@ -174,10 +148,11 @@ This project was designed using Figma, leveraging prototyping and collaborative 
       </div>
     </section>
   </main>
-</body>
 
-<footer>
+  <footer>
     <p>&copy; 2025 Ataka Shafia. All rights reserved.</p>
-</footer>
-<script src="./script.js"></script>
+  </footer>
+
+  <script src="./script.js"></script>
+</body>
 </html>
