--- a/index.html
+++ b/index.html
@@ -4,20 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="description"
-      content="Personal portfolio website of Ataka Shafia, a full-stack software engineer."
-    />
-    <meta
       name="keywords"
-      content="portfolio, full-stack software engineering, web developer, projects, skills, contact"
+      content="portfolio, full-stack software engineering, web developer, contact"
     />
     <meta name="author" content="Ataka Shafia" />
     <title>Portfolio - Ataka Shafia</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js"></script>
   </head>
+
   <body>
     <header>
-      <nav>
+      <nav class="navbar">
         <ul class="nav-list">
           <li><a href="#home" class="nav-link">Home</a></li>
           <li><a href="#about" class="nav-link">About Me</a></li>
@@ -28,222 +26,238 @@
     </header>
 
     <main>
-      <section id="home" class="section home-section" tabindex="-1">
-        <h1>What's up?</h1>
-        <h2>
-          You’ve just landed on the portfolio of <strong>Ataka Shafia</strong>
-        </h2>
-        <h3>
-          Check out my projects, learn my story, and see what I’m all about.
-        </h3>
-      </section>
+      <div class="container">
+        <section id="home" class="section home-section" tabindex="-1">
+          <h1>What's up?</h1>
+          <h2>
+            You’ve just landed on the portfolio of <strong>Ataka Shafia</strong>
+          </h2>
+          <h3>
+            Check out my projects, learn my story, and see what I’m all about.
+          </h3>
+        </section>
+      </div>
 
-      <section id="about" class="section about-section" tabindex="-1">
-        <h2>About Me</h2>
-        <p>
-          I’m Ataka Shafia, a Business and System Information student with a
-          growing interest in tech, communication, and digital strategy. I’m
-          passionate about connecting business needs with smart system
-          solutions, and I enjoy learning how different technologies can solve
-          real-world problems.
-        </p>
-
-        <div class="about-subsection">
-          <h3>Education</h3>
-          <p><strong>BINUS University</strong></p>
+      <div class="container">
+        <section id="about" class="section about-section" tabindex="-1">
+          <img
+            src="/milestone-1-atakashf/Assets/Profile Picture - Ataka Shafia.JPG"
+            alt="Profile Picture Ataka"
+          />
+          <h2>About Me</h2>
           <p>
-            Undergraduate - Entrepreneurship Business Creation & System
-            Information
+            I’m Ataka Shafia, a Business and System Information student with a
+            growing interest in tech, communication, and digital strategy. I’m
+            passionate about connecting business needs with smart system
+            solutions, and I enjoy learning how different technologies can solve
+            real-world problems.
           </p>
-          <p>GPA 3.62/4.00</p>
-          <hr class="subsection-divider" />
-          <p><strong>RevoU</strong></p>
-          <p>Full-Stack Software Engineering</p>
-        </div>
+          <button>Download CV</button>
 
-        <div class="about-subsection">
-          <h3>Work Experience</h3>
-          <ul>
-            <li>Production Intern - Casavira (2021-2022)</li>
-            <li>Junior Dressmaker Intern - Freddy Kebaya (2019-2020)</li>
-          </ul>
-        </div>
+          <div class="about-subsection">
+            <h3>Education</h3>
+            <p><strong>BINUS University</strong></p>
+            <p>Undergraduate - Entrepreneurship Business Creation</p>
+            <p>Undergraduate - Information System</p>
+            <p>GPA 3.62/4.00</p>
+            <hr class="subsection-divider" />
+            <p><strong>RevoU</strong></p>
+            <p>Full-Stack Software Engineering</p>
+          </div>
 
-        <div class="about-subsection">
-          <h3>Skills</h3>
-          <div class="skills-container">
-            <div class="skill-category">
-              <h4>Front-End</h4>
-              <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>jQuery</li>
-              </ul>
-            </div>
-            <div class="skill-category">
-              <h4>Back-End</h4>
-              <ul>
-                <li>Node.js</li>
-                <li>MySQL</li>
-              </ul>
-            </div>
-            <div class="skill-category">
-              <h4>Tools</h4>
-              <ul>
-                <li>Figma</li>
-                <li>VS Code</li>
-                <li>Netbeans</li>
-                <li>Visual Paradigm</li>
-                <li>Mendix</li>
-              </ul>
+          <div class="about-subsection">
+            <h3>Work Experience</h3>
+            <ul>
+              <li>
+                Account Executive - <strong>Doxadigital</strong> (August 2025 -
+                now)
+              </li>
+            </ul>
+          </div>
+
+          <div class="about-subsection">
+            <h3>Skills</h3>
+            <div class="skills-container">
+              <div class="skill-category">
+                <h4>Front-End</h4>
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>JavaScript</li>
+                  <li>React</li>
+                  <li>jQuery</li>
+                </ul>
+              </div>
+              <div class="skill-category">
+                <h4>Back-End</h4>
+                <ul>
+                  <li>Node.js</li>
+                  <li>MySQL</li>
+                </ul>
+              </div>
+              <div class="skill-category">
+                <h4>Tools</h4>
+                <ul>
+                  <li>Figma</li>
+                  <li>VSCode</li>
+                  <li>Netbeans</li>
+                  <li>Visual Paradigm</li>
+                  <li>Mendix</li>
+                  <li>Miro</li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="about-subsection">
-          <h3>Interests</h3>
-          <ul>
-            <li>UI/UX Design</li>
-            <li>Full-Stack Web Development</li>
-            <li>Database Documentation</li>
-            <li>ERP Systems</li>
-            <li>System Analysis and Design</li>
-          </ul>
-        </div>
-      </section>
+          <div class="about-subsection">
+            <h3>Interests</h3>
+            <ul>
+              <li>UI/UX Design</li>
+              <li>Full-Stack Web Development</li>
+              <li>System Analysis and Design</li>
+            </ul>
+          </div>
+        </section>
+      </div>
 
-      <section id="projects" class="section projects-section" tabindex="-1">
-        <h2>My Projects</h2>
-        <div class="projects-container">
-          <article class="project-card">
-            <img
-              src="./Assets/KUM.png"
-              alt="ERP System for KUM Villa Management in Bali"
+      <div class="container">
+        <section id="projects" class="section projects-section" tabindex="-1">
+          <h2>My Projects</h2>
+          <div class="projects-container">
+            <article class="project-card">
+              <img
+                src="./Assets/KUM.png"
+                alt="ERP System for KUM Villa Management in Bali"
+              />
+              <h3>ERP System: KUM Management</h3>
+              <p>
+                Designed an ERP system to solve operational issues like double
+                bookings and financial tracking for KUM Villa Management,
+                earning an A grade in the business pitching session.
+              </p>
+            </article>
+
+            <article class="project-card">
+              <img
+                src="./Assets/STUDICA.png"
+                alt="Front-end development for STUDICA e-learning platform"
+              />
+              <h3>Front-End Developer: STUDICA</h3>
+              <p>
+                Developed the front-end for STUDICA, a platform for discovering
+                and enrolling in online courses, using HTML, CSS, and JavaScript
+                to create a user-friendly experience.
+              </p>
+            </article>
+
+            <article class="project-card">
+              <img
+                src="./Assets/Maxim.png"
+                alt="Quality assurance testing for the Maxim mobile application"
+              />
+              <h3>QA: Maxim Mobile App</h3>
+              <p>
+                Conducted manual black-box testing on the Maxim app, executing
+                98 test scenarios, identifying 7 bugs, and compiling
+                comprehensive documentation, achieving a score of 92/100.
+              </p>
+            </article>
+
+            <article class="project-card">
+              <img
+                src="./Assets/Artha Co.png"
+                alt="Database documentation for ArthaCo"
+              />
+              <h3>Database Design and Documentation: ArthaCo</h3>
+              <p>
+                Prepared complete database design documentation, from business
+                requirements to the final ERD, using Visual Paradigm and Miro
+                for collaboration, earning a score of 90/100.
+              </p>
+            </article>
+
+            <article class="project-card">
+              <img
+                src="./Assets/JustClick.png"
+                alt="UI/UX wireframe design for the JustClick HR platform"
+              />
+              <h3>UI/UX Design: Just Click</h3>
+              <p>
+                Designed a Hi-Fi wireframe for JustClick, an HR platform, using
+                Figma to create an intuitive interface for monitoring operations
+                and employee productivity.
+              </p>
+            </article>
+          </div>
+        </section>
+      </div>
+
+      <div class="container">
+        <section id="contact" class="section contact-section" tabindex="-1">
+          <h2>Contact Me</h2>
+          <form id="contact-form" action="/Submit-kontak" method="POST">
+            <label for="name">Name:</label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              required
+              aria-required="true"
             />
-            <h3>ERP System: KUM Management</h3>
-            <p>
-              Designed and built an ERP system to solve operational issues like
-              double bookings and financial tracking for KUM Villa Management,
-              earning an A grade in the business pitching session.
-            </p>
-          </article>
-          <article class="project-card">
-            <img
-              src="./Assets/STUDICA.png"
-              alt="Front-end development for STUDICA e-learning platform"
-            />
-            <h3>Front-End: STUDICA</h3>
-            <p>
-              Developed the front-end for STUDICA, a platform for discovering
-              and enrolling in online courses, using HTML, CSS, and JavaScript
-              to create a user-friendly experience.
-            </p>
-          </article>
-          <article class="project-card">
-            <img
-              src="./Assets/Maxim.png"
-              alt="Quality assurance testing for the Maxim mobile application"
-            />
-            <h3>QA: Maxim Mobile App</h3>
-            <p>
-              Conducted manual black-box testing on the Maxim app, executing 98
-              test scenarios, identifying 7 bugs, and compiling comprehensive
-              documentation, achieving a score of 92/100.
-            </p>
-          </article>
-          <article class="project-card">
-            <img
-              src="./Assets/Artha Co.png"
-              alt="Database documentation for ArthaCo"
-            />
-            <h3>Database Docs: ArthaCo</h3>
-            <p>
-              Prepared complete database design documentation, from business
-              requirements to the final ERD, using Visual Paradigm and Miro for
-              collaboration, earning a score of 90/100.
-            </p>
-          </article>
-          <article class="project-card">
-            <img
-              src="./Assets/JustClick.png"
-              alt="UI/UX wireframe design for the JustClick HR platform"
-            />
-            <h3>UI/UX Design: Just Click</h3>
-            <p>
-              Designed a Hi-Fi wireframe for JustClick, an HR platform, using
-              Figma to create an intuitive interface for monitoring operations
-              and employee productivity.
-            </p>
-          </article>
-        </div>
-      </section>
 
-      <section id="contact" class="section contact-section" tabindex="-1">
-        <h2>Contact Me</h2>
-        <form
-          id="contact-form"
-          action="https://formspree.io/f/your-form-id"
-          method="POST"
-        >
-          <label for="name">Name:</label>
-          <input
-            type="text"
-            id="name"
-            name="name"
-            required
-            aria-required="true"
-          />
+            <label for="email">Email:</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              required
+              aria-required="true"
+            />
 
-          <label for="email">Email:</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            required
-            aria-required="true"
-          />
+            <label for="message">Message:</label>
+            <textarea
+              id="message"
+              name="message"
+              placeholder="Input your message here!"
+              rows="5"
+              required
+              aria-required="true"
+            ></textarea>
 
-          <label for="message">Message:</label>
-          <textarea
-            id="message"
-            name="message"
-            rows="5"
-            required
-            aria-required="true"
-          ></textarea>
+            <button type="submit">Send Message</button>
+          </form>
 
-          <button type="submit">Send Message</button>
-        </form>
-        <div class="contact-links">
-          <a
-            href="https://wa.me/6285155388761"
-            target="_blank"
-            rel="noopener noreferrer"
-            >WhatsApp</a
-          >
-          <a
-            href="https://www.linkedin.com/in/ataka-shafia-b06854327/"
-            target="_blank"
-            rel="noopener noreferrer"
-            >LinkedIn</a
-          >
-          <a
-            href="https://github.com/atakashf"
-            target="_blank"
-            rel="noopener noreferrer"
-            >GitHub</a
-          >
-          <a href="mailto:shafiaataka@gmail.com">Email</a>
-        </div>
-      </section>
+          <div class="contact-links">
+            <img src="" alt="WhatsApp Icon" />
+            <a
+              href="https://wa.me/6285155388761"
+              target="_blank"
+              rel="noopener noreferrer"
+              >WhatsApp</a
+            >
+            <img src="" alt="LinkedIn Icon" />
+            <a
+              href="https://www.linkedin.com/in/ataka-shafia-b06854327/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >LinkedIn</a
+            >
+            <img src="" alt="GitHub Icon" />
+            <a
+              href="https://github.com/atakashf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >GitHub</a
+            >
+            <img src="" alt="Gmail Icon" />
+            <a href="mailto:shafiaataka@gmail.com">Email</a>
+          </div>
+        </section>
+      </div>
     </main>
 
     <footer>
-      <p>&copy; 2025 Ataka Shafia. All rights reserved.</p>
+      <p>&copy; Ataka Shafia. All rights reserved.</p>
     </footer>
-
-    <script src="./script.js"></script>
   </body>
 </html>
