feat: enhance timeline section with grid layout and card design

--- a/index.html
+++ b/index.html
@@ -70,35 +70,39 @@
         <!-- TIMELINE -->
         <div class="container-timeline">
           <div class="timeline-column">
-            <h3>Educations</h3>
-            <div class="timeline">
-              <div class="timeline-item">
-                <h4>RevoU</h4>
-                <p><strong>Fullstack Software Engineer</strong></p>
-                <span>June 2025 – Present</span>
+            <article class="timeline-card">
+              <h3>Educations</h3>
+              <div class="timeline">
+                <div class="timeline-item">
+                  <h4>RevoU</h4>
+                  <p><strong>Fullstack Software Engineer</strong></p>
+                  <span>June 2025 – Present</span>
+                </div>
+                <div class="timeline-item">
+                  <h4>BINUS University</h4>
+                  <p>
+                    <strong
+                      >Bachelor's Degree, Business Creation and Information
+                      System</strong
+                    >
+                  </p>
+                  <span>Sep 2022 – Present</span>
+                  <p>GPA: 3.62 / 4.00</p>
+                </div>
               </div>
-              <div class="timeline-item">
-                <h4>BINUS University</h4>
-                <p>
-                  <strong
-                    >Bachelor's Degree, Business Creation and Information
-                    System</strong
-                  >
-                </p>
-                <span>Sep 2022 – Present</span>
-                <p>GPA: 3.62 / 4.00</p>
-              </div>
-            </div>
+            </article>
           </div>
           <div class="timeline-column">
-            <h3>Experiences</h3>
-            <div class="timeline">
-              <div class="timeline-item">
-                <h4>Doxadigital</h4>
-                <p><strong>Account Executive</strong></p>
-                <span>Aug 2025 – Present</span>
+            <article class="timeline-card">
+              <h3>Experiences</h3>
+              <div class="timeline">
+                <div class="timeline-item">
+                  <h4>Doxadigital</h4>
+                  <p><strong>Account Executive</strong></p>
+                  <span>Aug 2025 – Present</span>
+                </div>
               </div>
-            </div>
+            </article>
           </div>
         </div>
       </section>
